force-app/main/default/objects/POE_Dealer_Code__c/fields/POE_Provider__c.field-meta.xml
<CustomField>
    <fullName>POE_Provider__c</fullName>
    <label>Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AT&amp;T</fullName>
                <isActive>false</isActive>
                <label>AT&amp;T</label>
            </value>
            <value>
                <fullName>Brightspeed</fullName>
            </value>
            <value>
                <fullName>Brinks</fullName>
                <isActive>false</isActive>
                <label>Brinks</label>
            </value>
            <value>
                <fullName>DirecTV</fullName>
                <label>DIRECTV</label>
            </value>
            <value>
                <fullName>EarthLink</fullName>
                <isActive>false</isActive>
                <label>EarthLink</label>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Altice</fullName>
                <label>Optimum</label>
            </value>
            <value>
                <fullName>Charter/Spectrum</fullName>
                <label>Spectrum</label>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
                <isActive>false</isActive>
                <label>T-Mobile</label>
            </value>
            <value>
                <fullName>Viasat</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
                <isActive>false</isActive>
                <label>Windstream</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>